# AtlasTech2

./: .gitignore  CMakeLists.txt
Projects/: CMakeLists.txt
Projects/Arena/: Arena.cpp  Arena.h  Arena.vcproj  Arena.vcxproj  Main.cpp  RunAsClient.cmd  RunAsServer.cmd  TODO.txt  Types.h  engine.conf  tcpclient.conf  tcpserver.conf
Projects/Arena/Bullet/: Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h
Projects/Arena/Camera/: BasicCamera.cpp  BasicCamera.h  EditorCamera.cpp  EditorCamera.h
Projects/Arena/ClientSidePrediction/: ClientSidePrediction.cpp  ClientSidePrediction.h  IPredictionCorrector.h  Types.h
Projects/Arena/Collision/: Manager.cpp  Manager.h
Projects/Arena/Editor/: Editor.cpp  Editor.h
Projects/Arena/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IEntityManager.h
Projects/Arena/Menu/: MainMenu.cpp
Projects/Arena/Network/: ATelegram.h  ILocalPlayerManager.h  ISender.h  Settings.h
Projects/Arena/Player/: Player.cpp  Player.h
Projects/Arena/Terrain/: Manager.cpp  Manager.h
Projects/Arena/Weapon/: Manager.cpp  Manager.h  Weapon.cpp  Weapon.h
Projects/Arena/base/: game.conf
Projects/Engine/: CMakeLists.txt  Engine.vcproj  Engine.vcxproj  TODO.txt  globals.cpp  globals.h
Projects/Engine/Appearence/: AlphaAttributes.cpp  AlphaAttributes.h  BlendAttributes.cpp  BlendAttributes.h  Environmental.cpp  Environmental.h  LightAttributes.cpp  LightAttributes.h
Projects/Engine/Application/: Application.cpp  Application.h  CMakeLists.txt
Projects/Engine/Camera/: CMakeLists.txt  Viewer.cpp  Viewer.h
Projects/Engine/Clouds/: CMakeLists.txt  ConsolePlugin.h  Manager.cpp  Manager.h  Settings.h
Projects/Engine/Common/: Context.cpp  Context.h  EventQueue.cpp  EventQueue.h  Exceptions.h  Logger.cpp  Logger.h  Singleton.h  StdOutLogger.cpp  StdOutLogger.h
Projects/Engine/Console/: Console.cpp  Console.h  ConsolePlugin.h  Settings.h
Projects/Engine/Core/: CMakeLists.txt  Engine.cpp  Engine.h  EngineSettings.cpp  EngineSettings.h  EngineStates.cpp  EngineStates.h  GeneralManager.cpp  GeneralManager.h  IdGenerator.cpp  IdGenerator.h  Settings.h
Projects/Engine/Database/: SQLEntry.cpp  SQLEntry.h  SQLRecord.cpp  SQLRecord.h  SQLResult.cpp  SQLResult.h  SqlQuery.cpp  SqlQuery.h
Projects/Engine/Driver/: CMakeLists.txt  Driver.cpp  Driver.h  DriverExtensions.h  DriverInformation.cpp  DriverInformation.h  DriverUtils.cpp  DriverUtils.h  GLWrapper.cpp  GLWrapper.h  Keyboard.cpp  Keyboard.h  (+2 more)
Projects/ISCViewer/: ISCViewer.cpp  ISCViewer.h  ISCViewer.vcproj  ISCViewer.vcxproj  Main.cpp  ignore.txt
Projects/Libs/: ignore.txt
Projects/ObjectiveScript/: ObjectiveScript.vcproj  ObjectiveScript.vcxproj
Projects/SpaceInvaders/: Main.cpp  SpaceInvaders.cpp  SpaceInvaders.h  SpaceInvaders.vcproj  SpaceInvaders.vcxproj  Types.h  engine.conf
Projects/TestDrive/: Main.cpp  TestDrive.cpp  TestDrive.h  TestDrive.vcproj  TestDrive.vcxproj  engine.conf  ignore.txt
Projects/TestSuite/: TestSuite.vcproj  TestSuite.vcxproj  main.cpp
Projects/Tools/: AEMeshViewer.vcproj  ShaderCompiler.vcproj  ShaderCompiler.vcxproj  TODO.txt  ignore.txt  test.frag
Projects/WorldEditor/: Main.cpp  TODO.txt  WorldEditor.cpp  WorldEditor.h  WorldEditor.vcproj  WorldEditor.vcxproj  engine.conf
(+913 files in other folders)
